[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csr8675-i2s-host-stack"
version = "0.2.0"
description = "Open host-side stack for CSR8675-based I2S modules"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "OpenAI"}]
dependencies = [
  "pyserial>=3.5"
]

[project.scripts]
csr8675ctl = "csr8675_i2s_toolkit.cli:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
pythonpath = ["python"]
